--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
+    "vant": "^2.12.48",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
@@ -27,9 +31,10 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
-    "less": "^4.0.0",
+    "less": "^4.1.3",
     "less-loader": "^8.0.0",
     "lint-staged": "^11.1.2",
+    "postcss-pxtorem": "^6.0.0",
     "vue-template-compiler": "^2.6.14"
   },
   "gitHooks": {
